--- a/main.ipynb
+++ b/main.ipynb
@@ -144,7 +144,7 @@
    ],
    "source": [
     "data = pd.read_excel(\"MultinomialData01.xlsx\")\n",
-    "data = data.sort_values(\"Y\")\n",
+    "data = data.sort_values(\"Y\") # dit is totaal onnodig, maar ik weet anders niet 100% zeker op welke volgorde de data staat\n",
     "data"
    ]
   },
